# auto-scunet

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
scunet-login-util/: Cargo.toml
scunet-login-util/src/: lib.rs  types.rs  wifi.rs
src/: app.rs  config.rs  login.rs  main.rs  toast.rs
