[package]
name = "auto-scunet"
version = "0.4.1"
edition = "2021"
authors = ["East Monster <east_monster@126.com>"]
build = "build.rs"

[dependencies]
anyhow = "1"
auto-launch = "0.5.0"
eframe = { version = "0.27.0", default-features = false, features = ["glow"] }
egui = "0.27.0"
once_cell = "1.19"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
toml = "0.8"
scunet-login-util = { path = "scunet-login-util" }
serde = "1"
serde_derive = "1"
serde_json = "1"
webbrowser = "1"
win-toast-notify = "0.1.3"

[build-dependencies]
winresource = "0.1.17"

[profile.release]
strip = true
opt-level = "z"
